correction css spacing

--- a/programming/html-css/playground/gestion-espacement-arriere-plan/exercice-2-medium/style.css
+++ b/programming/html-css/playground/gestion-espacement-arriere-plan/exercice-2-medium/style.css
@@ -5,7 +5,6 @@ body {
     margin: 0;
     background-image: url("images/space.jpg");
     background-repeat: no-repeat;
-    background-position: fixed;
     color: white;
     background-size: cover;
 }
